--- a/res/style.css
+++ b/res/style.css
@@ -6,8 +6,8 @@ html, body {
     height: 100%;
     font-family: sans-serif;
     font-size: 1em;
-    background-color: #345;
-    color: #DEF;
+    background-color: rgba(51, 68, 85, 0);
+    color: rgb(0, 0, 0);
 }
 
 #getNative{
@@ -143,7 +143,7 @@ h2 {
     flex-grow: 0;
     /* max-height: 300px; */
     padding: 5px;
-    background-color: #456;
+    background-color: rgb(0, 0, 0);
     position: relative;
     box-sizing: border-box;
 }
@@ -337,15 +337,15 @@ canvas:fullscreen{
 #simContainer btn {
     position: absolute;
     cursor: pointer;
-    --background: rgba(255,255,255,0.5);
+    --background: rgb(0, 0, 0);
 }
 
 
 #ideContainer {
     position: relative;
     flex-grow: 1;
-    background: #789;
-    border-top: solid 1px #DEF;
+    background: rgb(0, 0, 0) !important;
+    border-top: solid 1px rgb(0, 0, 0) !important;
     /* position: fixed; */
     /* left: 0; */
     /* width: 100%; */
